added starter screen

--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Code Quiz</title>
 </head>
 <body>
-    
-    <script src="/assets/script.js"></script>
+    <div id="top-bar">
+        <div id="HSScreen">High Scores</div>
+        <div id="timer"></div>
+    </div>
+
+    <div id="container">
+        <h1 id="title">Code Quiz</h1>
+        <p id="desc">Hit the start button to begin the quiz. You will have 100 seconds to answer 10 questions. For each missed question 5 seconds will be subtracted from your time. Once you've answered all the questions or the timer runs out you can save your score.</p>
+        <button id="start-button">start</button>
+    </div>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
