--- a/index.html
+++ b/index.html
@@ -10,14 +10,43 @@
 <body>
     <div id="top-bar">
         <div id="HSScreen">High Scores</div>
-        <div id="timer"></div>
+        <div id="timer">Timer: 100</div>
     </div>
 
-    <div id="container">
+    <div id="welcome"> <!-- shown on load, hidden as we start the quiz -->
         <h1 id="title">Code Quiz</h1>
         <p id="desc">Hit the start button to begin the quiz. You will have 100 seconds to answer 10 questions. For each missed question 5 seconds will be subtracted from your time. Once you've answered all the questions or the timer runs out you can save your score.</p>
         <button id="start-button">start</button>
     </div>
+
+    <div id="question"> <!-- hidden until called for  -->
+        <h2>Question</h2>
+        <ul id="answers">
+            <li id="a">Option A</li>
+            <li id="b">Option B</li>
+            <li id="c">Option C</li>
+            <li id="d">Option D</li>
+        </ul>
+        <h4 id="prevResult">
+            Correct
+        </h4>
+    </div>
+
+    <div id="results">
+        <h2>Finished!</h2>
+        <p id="resultsDesc">you got x/10 right</p>
+        <p>Enter your initials</p>
+        <input type="text">
+        <button>Submit</button>
+    </div>
+
+    <div id="highScore">
+        <h2>High Scores</h2>
+        <ol id="leaderBoard"></ol>
+        <button id="goBack">Go Back</button>
+        <button id="reset">Reset Scores</button>
+    </div>
+
     <script src="./assets/script.js"></script>
 </body>
 </html>
