updated styles, removed old sections commented out

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="resultsCard">
         <h2>Finished!</h2>
         <p id="resultsDesc"></p>
-        <p>Enter your initials to save your high scores</p>
+        <p>Enter your initials to save your high scores (3 char limit)</p>
         <input id="initials" type="text" placeholder="Your Initials">
         <button id="submit-button">Submit</button>
     </div>
