disable high scores link during game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="top-bar">
-        <div id="highScoreLink">High Scores</div>
+        <button id="highScoreLink">High Scores</button>
         <div id="timer">Timer: 100</div>
     </div>
 
